--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "canvas-confetti": "^1.9.3",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
+    "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
