--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
     "howler": "^2.2.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
